--- a/templates/src/layouts/Layout.astro
+++ b/templates/src/layouts/Layout.astro
@@ -64,17 +64,15 @@ const storyfragmentId = Astro.params.id || '01JD2RFH35HX8MQMBJ3344KHS5';
       type="text/javascript"
       src="//assets.mediadelivery.net/playerjs/player-0.1.0.min.js"></script>
 
-    <!-- Load Shoelace CSS FIRST -->
-    <link rel="stylesheet" href="/styles/shoelace.css" />
-
-    <!-- Load Shoelace components with proper module type -->
-    <script type="module">
-      import '/src/client/shoelace-init.js';
+    <script type="module" is:inline>
+      import '/src/client/belief-events.js';
     </script>
 
     <!-- HTMX -->
-    <script src="https://unpkg.com/htmx.org@2.0.4" crossorigin="anonymous"
-    ></script>
+    <script
+      src="https://unpkg.com/htmx.org@2.0.4"
+      crossorigin="anonymous"
+      is:inline></script>
 
     <ClientRouter />
   </head>
